# ReportRabbit

./: .gitignore  .nojekyll  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _quarto.yml  environment.yml  index.html  pyproject.toml  search.json  sitemap.xml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  config.yml
.github/workflows/: build.yml  ci-cd.yml  deploy.yml  release.yml
_site/: CHANGELOG.html  CODE_OF_CONDUCT.html  CONDUCT.html  CONTRIBUTING.html  search.json
_site/reference/: get_accuracy.html  get_mape.html  get_mse.html  get_mse_rmse.html  get_precision.html  get_r2.html  get_recall.html  get_rmse.html  index.html
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
reference/: get_f1.html  get_mae.html  get_r.html
src/reportrabbit/: __init__.py  __version__.py  mae.py  mape.py  mse_rmse.py  precision.py  r.py
tests/: test_reportrabbit.py
tests/unit/: test_mae.py  test_mape.py  test_mse_rmse.py
