[tool.poetry]
name = "reportrabbit"
version = "0.1.0"
description = "ReportRabbit is a diagnostic utility that automates the generation of performance metrics, visualization dashboards, and SHAP-based interpretations to turn raw model outputs into comprehensive evaluation reports."
authors = ["Jennifer Tsang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
